--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h3>Secure Page</h3>
-<a href="/logout"></a>
+<a href="/logout">logout</a>
+<h4>email</h4>
+<p th:text="${user.email}"></p><br/>
+<h4>last name</h4>
+<p th:text="${user.lastName}"></p>
 </body>
 </html>
